--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,13 +1,17 @@
-.div-menu-img{
+.div-menu-img {
     height: 160px;
     width: 92%;
     margin-left: 4%;
     margin-right: 4%;
     border-radius: 30px;
     position: relative;
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
 }
 
-.logo-circle{
+.logo-circle {
     position: absolute;
     left: 0px;
     width: 100%;
@@ -15,13 +19,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
-.logo-circle > img {
+.logo-circle>div {
     width: 120px;
     height: 120px;
     border-radius: 100px;
     border: 4px solid #00A6E2;
+
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
 }
 
 .logo-space {
@@ -33,7 +43,7 @@
 
 
 /*-------------------contenedor-----------------------*/
-.food-container{
+.food-container {
     width: 90%;
     border-radius: 20px;
     margin-left: 10%;
@@ -43,7 +53,8 @@
     border: 1px solid black;
     position: relative;
 }
-.food-img{
+
+.food-img {
     position: absolute;
     left: -10% !important;
     top: -17px !important;
@@ -51,19 +62,20 @@
     width: 110px;
     border-radius: 20px;
     background-position: center top;
-    background-size: 100% auto;
+    background-size: auto 100%;
 }
-.food-texto{
-    margin-top:4px;
+
+.food-texto {
+    margin-top: 4px;
     margin-left: 100px;
 }
 
-.food-texto > h1 {
+.food-texto>h1 {
     font-size: 1em;
     margin-bottom: 2px;
 }
 
-.food-texto > h2 {
+.food-texto>h2 {
     font-size: .8rem;
 }
 
@@ -85,9 +97,16 @@
     display: flex;
     padding: 5px;
     margin-bottom: 20px;
+    justify-content: center;
+    overflow-x: scroll;
 }
 
-.opciones-button > button{
+.opciones-button::-webkit-scrollbar {
+    display: none;
+    /* Ocultar scroll */
+}
+
+.opciones-button>button {
     width: 23%;
     margin-left: 1%;
     margin-right: 1%;
@@ -101,7 +120,7 @@
     color: #00A6E2;
 }
 
-.opciones-button > button:hover{
+.opciones-button>button:hover {
     background-color: #00A6E2;
     color: white;
 }
