--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,112 +1,161 @@
-.div-menu-img {
-    height: 160px;
-    width: 92%;
-    margin-left: 4%;
-    margin-right: 4%;
-    border-radius: 30px;
-    position: relative;
+.div-fixed-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100000000 !important;
+}
 
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+.visibility-hidden {
+    display: none;
+}
+.visibility-visible {
+    display: block;
+}
+
+.div-menu-img {
+  height: 160px;
+  width: 92%;
+  margin-top: 15px;
+  margin-left: 4%;
+  margin-right: 4%;
+  border-radius: 30px;
+  position: relative;
+
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+
+  
 }
 
 .logo-circle {
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    bottom: -60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  bottom: -60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.logo-circle>div {
-    width: 120px;
-    height: 120px;
-    border-radius: 100px;
-    border: 4px solid #00A6E2;
+.logo-circle > div {
+  width: 120px;
+  height: 120px;
+  border-radius: 100px;
+  border: 4px solid #00a6e2;
 
-
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: auto 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
 }
 
 .logo-space {
-    display: block !important;
-    height: 60px;
-    width: 100%;
-    margin-bottom: 20px;
+  display: block !important;
+  height: 60px;
+  width: 100%;
+  margin-bottom: 20px;
 }
-
 
 /*-------------------contenedor-----------------------*/
 .food-container {
-    width: 90%;
-    border-radius: 20px;
-    margin-left: 10%;
-    height: 110px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: 1px solid black;
-    position: relative;
+  width: 90%;
+  border-radius: 20px;
+  margin-left: 10%;
+  height: 110px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  position: relative;
 }
 
 .food-img {
-    position: absolute;
-    left: -10% !important;
-    top: -17px !important;
-    height: 110px;
-    width: 110px;
-    border-radius: 20px;
-    background-position: center top;
-    background-size: auto 100%;
+  position: absolute;
+  left: -10% !important;
+  top: -17px !important;
+  height: 110px;
+  width: 110px;
+  border-radius: 20px;
+  background-position: center top;
+  background-size: auto 100%;
 }
 
 .food-texto {
-    margin-top: 4px;
-    margin-left: 100px;
+  margin-top: 4px;
+  margin-left: 100px;
 }
 
-.food-texto>h1 {
-    font-size: 1em;
-    margin-bottom: 2px;
+.food-texto > h1 {
+  font-size: 1em;
+  margin-bottom: 2px;
 }
 
-.food-texto>h2 {
-    font-size: .8rem;
+.food-texto > h2 {
+  font-size: 0.8rem;
 }
 
 .food-button {
-    position: absolute;
-    bottom: 10px !important;
-    right: 10px !important;
-    background-color: #00A6E2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 20px 0px 20px;
-    color: white;
-    border-radius: 50px;
-
+  position: absolute;
+  bottom: 10px !important;
+  right: 10px !important;
+  background-color: #00a6e2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 20px 0px 20px;
+  color: white;
+  border-radius: 50px;
 }
 
+.div-invisible {
+    padding: 5px !important;
+    height: 40px !important;
+    margin-bottom: 20px !important;
+  }
+
 .opciones-button {
-    display: flex;
-    padding: 5px;
-    margin-bottom: 20px;
-    justify-content: center;
-    overflow-x: scroll;
+    height: 40px !important;
+  display: flex;
+  padding: 5px;
+  margin-bottom: 20px;
+  align-items: center;
+  justify-content: center;
+  overflow-x: scroll;
+  background-color: white;
 }
 
 .opciones-button::-webkit-scrollbar {
-    display: none;
-    /* Ocultar scroll */
+  display: none;
+  /* Ocultar scroll */
 }
 
-.opciones-button>button {
+.opciones-button > a {
+  width: 23% !important;
+  margin-left: 1% !important;
+  margin-right: 1% !important;
+  font-size: .8rem !important;
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+  outline: none !important;
+  border-radius: 20px !important;
+  border: 1px solid #00a6e2 !important;
+  text-decoration: none !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-category-btn {
+  background-color: white !important;
+  color: #00a6e2 !important;
+}
+
+.menu-category-active-btn {
+  background-color: #00a6e2 !important;
+  color: white !important;
+}
+
+/* .opciones-button>button {
     width: 23%;
     margin-left: 1%;
     margin-right: 1%;
@@ -123,4 +172,4 @@
 .opciones-button>button:hover {
     background-color: #00A6E2;
     color: white;
-}
+} */
