--- a/src/css/generalStyles.css
+++ b/src/css/generalStyles.css
@@ -1,10 +1,25 @@
 
 
+.qr-test-container{
+  background-image: url('../img/prueba.png');
+  background-size: auto 150%;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.sign-up-container{
+  background-image: url('../img/compu.png');
+  background-size: 180% auto;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
 @media (max-width: 767px) {
   .qr-test-container{
     height: auto;
     width: 100%;
     padding-top: 40px;
+    padding-bottom: 40px;
     box-sizing: border-box;
   }
 
@@ -295,6 +310,7 @@
     height: auto;
     width: 100%;
     padding-top: 40px;
+    padding-bottom: 40px;
     box-sizing: border-box;
   }
 
